src/objects/Periodo__c.object
<CustomObject>
    <fields>
        <fullName>ActivoEjecutiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo ejecutiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivoOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivoPresencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo presencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activo__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autorizado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FechaFinReal__c</fullName>
        <label>Fecha fin real</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaFin__c</fullName>
        <label>Fecha fin programada</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaInicioReal__c</fullName>
        <label>Fecha inicio real</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaInicio__c</fullName>
        <label>Fecha inicio programada</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdPeriodo__c</fullName>
        <externalId>true</externalId>
        <label>IdPeriodo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SolicitudAutorizacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitud de autorización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &quot;apex/OFE_OfertaEducativa?id=&quot; &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>Periodo</label>
    <listViews>
        <fullName>Activos</fullName>
        <columns>NAME</columns>
        <columns>ActivoEjecutiva__c</columns>
        <columns>ActivoOnline__c</columns>
        <columns>ActivoPresencial__c</columns>
        <columns>FechaInicioReal__c</columns>
        <columns>FechaFinReal__c</columns>
        <columns>Activo__c</columns>
        <columns>Autorizado__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filters>
        <label>Activos</label>
    </listViews>
    <listViews>
        <fullName>ActivosParaLandingPages</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ActivoEjecutiva__c</columns>
        <columns>ActivoOnline__c</columns>
        <columns>ActivoPresencial__c</columns>
        <columns>FechaInicioReal__c</columns>
        <columns>FechaFinReal__c</columns>
        <columns>Activo__c</columns>
        <columns>Autorizado__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActivoEjecutiva__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ActivoOnline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ActivoPresencial__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activos para Landing Pages</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActivoEjecutiva__c</columns>
        <columns>ActivoOnline__c</columns>
        <columns>ActivoPresencial__c</columns>
        <columns>FechaInicioReal__c</columns>
        <columns>FechaFinReal__c</columns>
        <columns>Activo__c</columns>
        <columns>Autorizado__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Autorizados</fullName>
        <columns>NAME</columns>
        <columns>ActivoEjecutiva__c</columns>
        <columns>ActivoOnline__c</columns>
        <columns>ActivoPresencial__c</columns>
        <columns>FechaInicioReal__c</columns>
        <columns>FechaFinReal__c</columns>
        <columns>Activo__c</columns>
        <columns>Autorizado__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Autorizado__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Autorizados</label>
    </listViews>
    <listViews>
        <fullName>Inactivos</fullName>
        <columns>NAME</columns>
        <columns>ActivoEjecutiva__c</columns>
        <columns>ActivoOnline__c</columns>
        <columns>ActivoPresencial__c</columns>
        <columns>FechaInicioReal__c</columns>
        <columns>FechaFinReal__c</columns>
        <columns>Activo__c</columns>
        <columns>Autorizado__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>Inactivo</value>
        </filters>
        <label>Inactivos</label>
    </listViews>
    <nameField>
        <label>Periodo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periodos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>